# prism-bck

./: main.py  pyproject.toml
backend/: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: battleApi.py  chatApi.py  coachingApi.py  conceptOfDayApi.py  historyApi.py  leaderboardApi.py  ncertApi.py  personalizationApi.py  quizApi.py  studyChatApi.py  studyChatRestApi.py  studyPlannerApi.py  tutorialsApi.py  userApi.py
backend/data/: users.json
backend/database/: mongodb.py  schemas.py
backend/helpers/: userHelper.py
backend/models/: chatModel.py  userModel.py
backend/rag/: __init__.py  agent_state.py  data_loader.py  embedding.py  graph.py  nodes.py  pipeline.py  vectorstore.py
