[project]
name = "prism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "motor>=3.7.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.0",
    "pillow>=12.2.0",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "python-socketio>=5.16.1",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
